[package]
name = "gptpal"
version = "0.1.0"
description = "ChatGPT desktop application"
authors = ["i@guantong.dev"]
license = "GPL-3.0-or-later"
repository = "https://github.com/openai-rs/gptpal"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
# tauri
tauri = { version = "1.2", features = ["shell-open"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
# openai
openai_api_rust = "0.1.5"
pulldown-cmark = "0.9"
# prompts
ureq = "2.6"
csv = "1.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
